Fix: console tab spacing (#37)
* Adds more padding around tabs

* Hides horizontal scrollbar on network devices

* Adds more padding between left and right of devices

* Adds "coming soon" to the tab section

* Updates snapshot

* Fixes weird padding on tabs

* Renames classes and fixes the no-background issue

--- a/src/Emulator/Tabs/ConfigureTab/ConfigureTab.css
+++ b/src/Emulator/Tabs/ConfigureTab/ConfigureTab.css
@@ -1,12 +1,10 @@
 .configure {
-  z-index: -1;
-  width: 69vw;
   padding: 20px;
   padding-top: 0px;
-  border-radius: 10px;
+  border-radius: 0 10px 10px 10px;
   border-top: 0;
-  margin-top: -3vh;
   position: relative;
+  background-color: #454950;
 }
 
 .configure::-webkit-scrollbar {
@@ -38,6 +36,7 @@
 .network-devices {
   display: flex;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .max-nodes {
