--- a/src/Emulator/Tabs/Tabs.css
+++ b/src/Emulator/Tabs/Tabs.css
@@ -1,46 +1,37 @@
-.tabs {
+.tabs__container {
   z-index: 1;
-  margin-left: 1vw;
-  background-color: #454950;
-  height: 31vh;
-  width: 69vw;
   border-radius: 0 10px 10px 10px;
-  margin-top: 6.6vh;
   position: relative;
 }
 
-.outer-tabs-container {
-  height: 6vh;
+.tabs__outer-tabs-container {
   display: flex;
   position: relative;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   bottom: 15%;
-  padding-top: 1vh;
   width: 300px;
   background-color: #33373b;
 }
 
-.tabs-container {
-  height: 6vh; 
+.tabs__tabs-container {
   display: flex;
-  position: absolute;
+  justify-content: space-evenly;
   top: 0;
   left: 0;
   background-color: #454950;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   width: 100%;
-  padding-bottom: 1.5vh;
-  padding-top: 1.5%;
-  padding-left: 1%;
+  padding: 0.459rem;
 }
 
-.tab {
+.tabs__tab {
   color: white;
   opacity: 0.75;
   font-size: large;
-  padding: 5px;
+  padding: 0.459rem;
+  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -48,20 +39,25 @@
   width: 10%
 }
 
-.active {
+.tabs__tab--active {
   display: inline-block;
   background-color: rgb(17, 15, 15);
-  border-radius: 10px;
   font-weight: bold;
   opacity: 1;
 }
 
-.hide {
+.tabs__aplication-container--hide {
   display: none;
   height: 50vh;
 }
 
-.show {
+.tabs__aplication-container--show {
   display: inherit;
-  z-index: -2;
+  /* z-index: -2; */
+}
+
+.tabs__applications-container {
+  background-color: #454950;
+  border-radius: 0 10px 10px 10px;
+  min-height: 17rem;
 }
